# python-project-50

./: README.md  pyproject.toml
.github/workflows/: main.yml
gendiff/: __init__.py  diff.py  diff_with_formatter.py  generate_diff.py
gendiff/formaters/: __init__.py
gendiff/scripts/: gendiff.py
