[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Makeev095 <makeev095095@mail.ru>"]
readme = "README.md"
packages = [
    {include = "gendiff"},
]

[tool.poetry.dependencies]
pyyaml = "^6.0"
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
